[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py35,py36,py36,py37,py38,py39

[testenv]
deps = coverage
       numpy
       opencv-python
       pycodestyle
       pydoc-markdown
       pylint
commands = pycodestyle cvd_image_converter test setup.py
           pylint cvd_image_converter test setup.py
           coverage run --source=cvd_image_converter -m unittest discover
           coverage report -m
           python setup.py sdist
           bash -c 'pydocmd simple cvd_image_converter++ cvd_image_converter.convert_color_palette++ > doc/api_documentation.md'
whitelist_externals = /bin/bash
"""
